# cookiecutter-rust-fullstack

./: .gitignore  README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: README.md  build.py  deploy.sh  wasp
{{cookiecutter.project_slug}}/backend/: .gitignore  Cargo.toml  Rocket.toml
{{cookiecutter.project_slug}}/backend/src/: main.rs
{{cookiecutter.project_slug}}/deploy/: {{cookiecutter.project_slug}}.conf  {{cookiecutter.project_slug}}.service
{{cookiecutter.project_slug}}/frontend/: Cargo.toml  package-lock.json  package.json  webpack.dev.config.js  webpack.prod.config.js
{{cookiecutter.project_slug}}/frontend/html/: index.html
{{cookiecutter.project_slug}}/frontend/js/: app.js  startup.js
{{cookiecutter.project_slug}}/frontend/src/: controller.rs  lib.rs  utils.rs  view.rs
{{cookiecutter.project_slug}}/shared/: .gitignore  Cargo.toml
{{cookiecutter.project_slug}}/shared/src/: lib.rs
