[package]
name = "backend"
version = "{{cookiecutter.version}}"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
rocket_contrib = "0.4.0"
shared = { path = "../shared" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
